@@ -37,13 +37,13 @@ if(PYTHIA8_INCLUDE_DIR AND PYTHIA8_XMLDOC_DIR)
     HINTS ${PYTHIA8_ROOT_DIR}/lib
           ${PYTHIA8_ROOT_DIR}/lib64)
 
-  set(PYTHIA8_INCLUDE_DIRS ${PYTHIA8_INCLUDE_DIR} ${PYTHIA8_INCLUDE_DIR}/Pythia8 )
+  set(PYTHIA8_INCLUDE_DIRS ${PYTHIA8_INCLUDE_DIR} ${PYTHIA8_INCLUDE_DIR}/Pythia8 ${PYTHIA8_INCLUDE_DIR}/Pythia8Plugins)
   set(PYTHIA8_LIBRARIES ${PYTHIA8_LIBRARY})
   if(PYTHIA8_VERSION VERSION_LESS 8.200)
     #Is this library needed?
     #set(PYTHIA8_LIBRARIES ${PYTHIA8_LIBRARY} ${PYTHIA8_lhapdfdummy_LIBRARY})
   endif()
-  find_file(resHEPMC3 HepMC3.h PATHS  ${PYTHIA8_INCLUDE_DIRS} NO_DEFAULT_PATH)
+  find_file(resHEPMC3 HepMC3.h PATHS  ${PYTHIA8_INCLUDE_DIR}/Pythia8Plugins NO_DEFAULT_PATH)
   if (resHEPMC3)
     set(Pythia8_HepMC3_FOUND TRUE)
   endif()
