@@ -1,4 +1,6 @@
   --------------------------  HepMC3.2.7-pre ----------------------
+2023-09-015 Andrii Verbytskyi for HepMC
+         * Major update of the build system, removed most of the custom modules.
 2023-09-03 Andrii Verbytskyi for HepMC
          * Removed functions that operate on raw pointers.
   --------------------------  HepMC3.2.6 ----------------------
